<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/mqtt_host_ip"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/tcp_ip"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/info_host_textview"

        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mqtt_host_ip"
        app:layout_constraintBottom_toTopOf="@+id/connect_button"

        />
    <Button
        android:id="@+id/connect_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"

        android:text="@string/connect_mqtt_server"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mqtt_host_ip"
        />

    <EditText
        android:id="@+id/subscribe_topic_edittext"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"

        android:hint="@string/topic"
        app:layout_constraintBottom_toTopOf="@+id/subscribe_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/subscribe_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/subscribe"
        app:layout_constraintBottom_toTopOf="@+id/publish_topic_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/publish_topic_edittext"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"

        android:hint="@string/topic"
        app:layout_constraintBottom_toTopOf="@+id/publish_msg_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/publish_msg_textview"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"

        android:hint="@string/publish_message"
        app:layout_constraintBottom_toTopOf="@+id/publish_msg_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/publish_msg_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="100dp"
        android:text="@string/publishing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>